# Ajedrez

./: CMakeLists.txt  README.md  constantes.h  main.cpp  piezas_avanzadas.cpp  piezas_avanzadas.h  piezas_basicas.cpp  piezas_basicas.h  tablero.cpp  tablero.h  utilidades.cpp  utilidades.h
